fix: Indicator dot colors in dark mode

--- a/frappe/public/scss/common/css_variables.scss
+++ b/frappe/public/scss/common/css_variables.scss
@@ -165,8 +165,10 @@ $input-height: 28px !default;
 	--bg-orange: var(--orange-50);
 	--bg-red: var(--red-50);
 	--bg-gray: var(--gray-200);
+	--bg-grey: var(--gray-200);
 	--bg-light-gray: var(--gray-100);
-	--bg-dark-gray: var(--gray-900);
+	--bg-dark-gray: var(--gray-400);
+	--bg-darkgrey: var(--gray-400);
 	--bg-purple: var(--purple-100);
 	--bg-pink: var(--pink-50);
 	--bg-cyan: var(--cyan-50);
@@ -189,6 +191,9 @@ $input-height: 28px !default;
 	--text-on-orange: var(--orange-600);
 	--text-on-red: var(--red-600);
 	--text-on-gray: var(--gray-600);
+	--text-on-grey: var(--gray-600);
+	--text-on-darkgrey: var(--gray-700);
+	--text-on-dark-gray: var(--gray-700);
 	--text-on-light-gray: var(--gray-800);
 	--text-on-purple: var(--purple-700);
 	--text-on-pink: var(--pink-600);
